# mlops_corrupt_tests

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml  requirements.txt  requirements_test.txt  requirements_tests.txt  tasks.py
.dvc/: config
.github/workflows/: pre_commit.yaml  tests.yaml
data/processed/: test_target.pt  train_target.pt
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
src/mlops/: data.py  model.py  visualize.py
tests/: test_data.py  test_model.py
